kubernetes/final_cluster/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: final-cluster
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
