kubernetes/final_cluster/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  namespace: final-cluster
spec:
  rules:
  - host: minikube-bisalgt.info
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: django-clusterip-service
              port: 
                number: 8000
